--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Relax.Models/obj
 /Relax.Server.Client/bin
 /Relax.Server.Client/obj
+/Relax.Server/*.user
+/Relax.Server/Properties/PublishProfiles/*.user
