--- a/Relax.Models/Relax.Models.csproj
+++ b/Relax.Models/Relax.Models.csproj
@@ -5,4 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Kalavarda\Primitives\Kalavarda.Primitives\Kalavarda.Primitives.csproj" />
+  </ItemGroup>
+
 </Project>
