--- a/Relax.Server.Client/Relax.Server.Client.csproj
+++ b/Relax.Server.Client/Relax.Server.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Kalantyr.Libs\Kalantyr.Web\Kalantyr.Web.csproj" />
+    <ProjectReference Include="..\Relax.Models\Relax.Models.csproj" />
   </ItemGroup>
 
 </Project>
