--- a/Relax.Server/Relax.Server.csproj
+++ b/Relax.Server/Relax.Server.csproj
@@ -1,17 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <TargetFramework>$(DotNetTargetFramework)</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+	  <TargetFramework>$(DotNetTargetFramework)</TargetFramework>
+	  <ImplicitUsings>enable</ImplicitUsings>
+	  <UserSecretsId>dotnet-Relax.Server-E01D0498-9A8F-458D-B4E1-27DF6BDC1754</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Kalantyr.Auth\Kalantyr.Auth.Client\Kalantyr.Auth.Client.csproj" />
-    <ProjectReference Include="..\..\..\Kalantyr.Libs\Kalantyr.Web\Kalantyr.Web.csproj" />
+    <ProjectReference Include="..\Relax.Models\Relax.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Config\" />
+  </ItemGroup>
 </Project>
