--- a/Relax.Server/appsettings.json
+++ b/Relax.Server/appsettings.json
@@ -2,12 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "Auth": {
     "ServiceUrl": "http://WIN-QNU9TO285O8/auth",
     "AppKey": "56asdfjkSdf"
-  },
-  "AllowedHosts": "*"
+  }
 }
