--- a/Relax.Server/appsettings.json
+++ b/Relax.Server/appsettings.json
@@ -8,5 +8,8 @@
   "Auth": {
     "ServiceUrl": "http://WIN-QNU9TO285O8/auth",
     "AppKey": "56asdfjkSdf"
-  }
+  },
+  "Service": {
+    "CharactersUrl": "http://WIN-QNU9TO285O8/characters"
+  } 
 }
